# adapto-rs

./: Cargo.toml  README.md
.github/: build
.github/workflows/: build_binary_for_release.yml  cargo_build_and_test.yml  release.yml
src/: lib.rs  main.rs
